<?xml version="1.0"?>
<package>
  <name>depth_rgb_sync</name>
  <version>0.0.0</version>
  <description>The depth_rgb_sync package</description>
  <maintainer email="master@todo.todo">master</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>


  <export>

  </export>
</package>
